--- a/Assignment3/Views/Components/ComponentsIndex.cshtml
+++ b/Assignment3/Views/Components/ComponentsIndex.cshtml
@@ -79,7 +79,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Components)
+            @foreach (var item in Model.Components.Where(x => x.ComponentIdsList.Contains(Model.SelectedComponentTypeId)))
             {
                 <tr>
                     <td>
